--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "webpack-mock-server": "^1.0.15"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
