--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
     "webpack-mock-server": "^1.0.15"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.178",
     "axios": "^0.25.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
