--- a/package.json
+++ b/package.json
@@ -111,10 +111,12 @@
   "dependencies": {
     "@types/lodash": "^4.14.178",
     "axios": "^0.25.0",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "yup": "^0.32.11"
   }
 }
